<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="check_in">Check-In</string>
    <string name="profile">Profile</string>
    <string name="discussion">Discussion</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="profile_button_to_take_to_profile_activity">profile button to take to profile activity</string>
    <string name="check_in_button_to_goto_check_in_activity">check-in button to goto check-in activity</string>
    <string name="sign_out_button_to_goto_sign_in_page">sign out button to goto sign in page</string>
    <string name="settings_button_to_goto_settings_screen">settings button to goto settings screen</string>
    <string name="help_button_to_goto_help_screen">help button to goto help screen</string>
    <string name="discussion_button_to_goto_discussion_activity">discussion button to goto discussion activity</string>
    <string name="classes_attending">CLASSES ATTENDING</string>
    <string name="need_to_setup_classes_database_and_pull_info">Need to setup classes database and pull info</string>
    <string name="classes_instructing">CLASSES INSTRUCTING</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="type_a_message">Type a message</string>
    <string name="email">Email</string>
    <string name="contact_us">CONTACT US</string>
    <string name="welcome">WELCOME</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_tapping_quot_sign_up_quot_you_agree_to_the">By tapping \"Sign Up\" you agree to the</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="account">ACCOUNT</string>
    <string name="everyone_can_see_social_media_sites">Everyone can see social media sites</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="discussion_board">Discussion board</string>
    <string name="bio">BIO</string>
    <string name="this_is_where_someone_can_put_a_bio_about_themselves_that_their_classmates_and_instructors_can_see_to_get_to_know_them">This is where someone can put a bio about themselves that their classmates and instructors can see to get to know them.</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="social_media_sites_visibility">Social media sites visibility</string>
    <string name="edit">Edit</string>
    <string name="enter_email">Enter email:</string>
    <string name="submit">SUBMIT</string>
    <string name="exit">Exit</string>
    <string name="title_activity_get_password">GetPassword</string>
    <string name="subject">Subject</string>

    <string name="action_delete_all">Delete All Geofences</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Geofence</string>
    <string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

    <!-- Hints -->
    <string name="Hint.Name">Name for the geofence</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <!-- Units -->
    <string name="Units.Degrees">\u00B0</string>
    <string name="Units.Kilometers">km</string>

    <!-- Notification -->
    <string name="Notification.Title">Are we there yet?</string>
    <string name="Notification.Text">We\'re at %1$s!!!</string>

    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_all_geofence_fragment">AllGeofenceFragment</string>
</resources>
