<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tammy.test.HelpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:background="@drawable/contact_bubble"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/subject"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/message"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_a_message"
                android:padding="20dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:maxLines = "500"
                />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/send_message"
            android:textColor="#606565"
            android:onClick="sendMessage"/>

    </LinearLayout>

</RelativeLayout>
