<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_display"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/new_back">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="profile" />

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#606565"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/check_in_button"
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:src="@drawable/location"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="checkIn"/>

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#606565"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <ImageButton
                android:id="@+id/discussion_button"
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:src="@drawable/discussion"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="discussionBoard"/>

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/discussion"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#606565"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:src="@drawable/help"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="help"/>

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Help"
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="sans-serif"
                android:textColor="#606565"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:src="@drawable/settings"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="settings"/>

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#606565"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/sign_out_button"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/signout"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@drawable/rounded_button"
                android:scaleType="centerCrop"
                android:onClick="signOut"/>

            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rounded_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Out"
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="sans-serif"
                android:textColor="#606565"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


